# data_profile

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml
data_profile/: __init__.py
data_profile/read_data/: __init__.py
